added batch processing for queries
