# swagger_server/controllers/path_controller.py
@@ -52,17 +52,14 @@ def convert_path(model_path):
 
 
 def find_paths_get(station_ids, search_mode=None,
-                   use_strict_intermediate_stations=None,
                    max_transitions_count=None, limit=None):
     """
     Find paths between stations.
 
     :param station_ids: 
-    :type station_ids: List[]
+    :type station_ids: List[str]
     :param search_mode: 
     :type search_mode: str
-    :param use_strict_intermediate_stations: 
-    :type use_strict_intermediate_stations: bool
     :param max_transitions_count: 
     :type max_transitions_count: int
     :param limit: 
@@ -70,11 +67,9 @@ def find_paths_get(station_ids, search_mode=None,
 
     :rtype: List[Path]
     """
-
     try:
         model_paths = Service().find_paths(
             station_ids=convert_array(station_ids), search_mode=search_mode,
-            use_strict_intermediate_stations=use_strict_intermediate_stations,
             max_transitions_count=max_transitions_count, limit=limit
         )
 
